--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,10 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://pax101gp:nNhDAyXkYGLT2UvE@cluster0.az4w8.mongodb.net/spotify_db?retryWrites=true&w=majority&appName=Cluster0
+
+ADMIN_EMAIL=pax101gp@gmail.com
+
+CLOUDINARY_API_KEY=134492922474463
+CLOUDINARY_API_SECRET=A2e4w95uSdQ9jYoheCBfKI6zypg
+CLOUDINARY_API_NAME=dnhhbpxum
+
+NODE_ENV=development
