Creating Auth Provider $ Callback Page

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,6 @@ CLOUDINARY_API_SECRET=A2e4w95uSdQ9jYoheCBfKI6zypg
 CLOUDINARY_API_NAME=dnhhbpxum
 
 NODE_ENV=development
+
+CLERK_PUBLISHABLE_KEY=pk_test_dXNhYmxlLW1hbGxhcmQtNC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_wWoTeoGram8BlO0RH2BK1QI3vCf5AryYf4344wnAKr
